--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         src="https://tenor.com/embed.js"
       ></script>
       <h1>Do you Forgive me? 🤗</h1>
-      <p>~Me Aap Se Ache Se baat karunga</p>
+      <p>~Please Maaf Kr Dijiye</p>
 
       <div class="btn">
         <a href="yes.html">Yes</a>
